--- a/index.html
+++ b/index.html
@@ -136,12 +136,14 @@
                         <!-- Ilustrasi Placeholder -->
                         <div class="lg:w-1/2 w-full flex justify-center transform hover:rotate-1 transition duration-500">
                             <!-- Placeholder Gambar Tahu Walik -->
-                            <div class="secondary-bg w-full max-w-md h-96 rounded-3xl flex items-center justify-center p-4 card-shadow">
-                                <svg class="w-2/3 h-2/3 primary-text opacity-75 animate-bounce" fill="currentColor" viewBox="0 0 24 24">
-                                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15h2v2h-2v-2zm-1-8h4v6h-4V9zm1 2h2v2h-2v-2z"/>
-                                </svg>
-                                <span class="absolute text-xl font-bold primary-text">Foto Tahu Walik</span>
-                            </div>
+                            <div class="lg:w-1/2 w-full flex justify-center transform hover:rotate-1 transition duration-500">
+                            <!-- Gambar Produk - Menggunakan URL placeholder yang relevan, mereferensikan tahu walik.png -->
+                            <img src="https://placehold.co/400x400/a0522d/f5deb3?text=Tahu+Walik+Krispi" 
+                                 alt="Gambar produk Tahu Walik (tahu walik.png)" 
+                                 class="w-full max-w-md h-auto rounded-3xl object-cover card-shadow border-4 border-yellow-500 transition duration-500 hover:scale-105"
+                                 onerror="this.onerror=null; this.src='https://placehold.co/400x400/cccccc/000000?text=Gambar+Gagal+Dimuat';"
+                            />
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -197,10 +199,7 @@
                         Hubungi kami untuk pemesanan, informasi kemitraan, atau pertanyaan lainnya.
                     </p>
                     <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-6">
-                        <a href="mailto:info@tahuwalik.com" class="inline-block primary-bg text-white px-8 py-3 rounded-xl font-bold text-lg hover:bg-opacity-90 transition duration-300 transform hover:scale-105 card-shadow">
-                            Kirim Email
-                        </a>
-                        <a href="tel:+6281234567890" class="inline-block bg-yellow-500 text-gray-900 px-8 py-3 rounded-xl font-bold text-lg hover:bg-yellow-600 transition duration-300 transform hover:scale-105 card-shadow">
+                        <a href="tel:+6281234600318 " class="inline-block bg-yellow-500 text-gray-900 px-8 py-3 rounded-xl font-bold text-lg hover:bg-yellow-600 transition duration-300 transform hover:scale-105 card-shadow">
                             Telepon Sekarang
                         </a>
                     </div>
@@ -211,7 +210,7 @@
         <!-- Footer -->
         <footer class="primary-bg text-white py-6 mt-12">
             <div class="container mx-auto px-4 text-center">
-                <p>&copy; 2024 Tahu Walik. Hak Cipta Dilindungi. <span class="text-sm opacity-80">(Berdasarkan data dari Afiyah, 2018)</span></p>
+                <p>&copy; 2025 Tahu Walik. Hak Cipta Dilindungi. </p>
             </div>
         </footer>
 
