--- a/index.html
+++ b/index.html
@@ -133,17 +133,14 @@
                                 Lihat Produk Kami
                             </a>
                         </div>
-                        <!-- Ilustrasi Placeholder -->
+                        <!-- Ilustrasi Produk Tahu Walik -->
                         <div class="lg:w-1/2 w-full flex justify-center transform hover:rotate-1 transition duration-500">
-                            <!-- Placeholder Gambar Tahu Walik -->
-                            <div class="lg:w-1/2 w-full flex justify-center transform hover:rotate-1 transition duration-500">
                             <!-- Gambar Produk - Menggunakan URL placeholder yang relevan, mereferensikan tahu walik.png -->
                             <img src="https://placehold.co/400x400/a0522d/f5deb3?text=Tahu+Walik+Krispi" 
                                  alt="Gambar produk Tahu Walik (tahu walik.png)" 
                                  class="w-full max-w-md h-auto rounded-3xl object-cover card-shadow border-4 border-yellow-500 transition duration-500 hover:scale-105"
                                  onerror="this.onerror=null; this.src='https://placehold.co/400x400/cccccc/000000?text=Gambar+Gagal+Dimuat';"
                             />
-                        </div>
                         </div>
                     </div>
                 </div>
@@ -199,8 +196,14 @@
                         Hubungi kami untuk pemesanan, informasi kemitraan, atau pertanyaan lainnya.
                     </p>
                     <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-6">
-                        <a href="tel:+6281234600318 " class="inline-block bg-yellow-500 text-gray-900 px-8 py-3 rounded-xl font-bold text-lg hover:bg-yellow-600 transition duration-300 transform hover:scale-105 card-shadow">
-                            Telepon Sekarang
+                        <a href="mailto:info@tahuwalik.com" class="inline-block primary-bg text-white px-8 py-3 rounded-xl font-bold text-lg hover:bg-opacity-90 transition duration-300 transform hover:scale-105 card-shadow">
+                            Kirim Email
+                        </a>
+                        <!-- TOMBOL WHATSAPP BARU -->
+                        <a href="https://wa.me/6281234567890?text=Halo%2C%20saya%20tertarik%20dengan%20Tahu%20Walik%20Anda." 
+                           target="_blank" 
+                           class="inline-block bg-green-500 text-white px-8 py-3 rounded-xl font-bold text-lg hover:bg-green-600 transition duration-300 transform hover:scale-105 card-shadow">
+                            Pesan via WhatsApp
                         </a>
                     </div>
                 </div>
@@ -210,7 +213,7 @@
         <!-- Footer -->
         <footer class="primary-bg text-white py-6 mt-12">
             <div class="container mx-auto px-4 text-center">
-                <p>&copy; 2025 Tahu Walik. Hak Cipta Dilindungi. </p>
+                <p>&copy; 2024 Tahu Walik. Hak Cipta Dilindungi. <span class="text-sm opacity-80">(Berdasarkan data dari Afiyah, 2018)</span></p>
             </div>
         </footer>
 
