--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                         </div>
                         <!-- Ilustrasi Produk Tahu Walik -->
                         <div class="lg:w-1/2 w-full flex justify-center transform hover:rotate-1 transition duration-500">
-                            <!-- Gambar Produk - Menggunakan URL placeholder yang relevan, mereferensikan tahu walik.png -->
-                            <img src="https://placehold.co/400x400/a0522d/f5deb3?text=Tahu+Walik+Krispi" 
-                                 alt="Gambar produk Tahu Walik (tahu walik.png)" 
+                            <!-- PERHATIAN: src telah diubah ke jalur file lokal yang Anda sediakan: 'tahu walik.png' -->
+                            <img src="tahu walik.png" 
+                                 alt="Gambar produk Tahu Walik" 
                                  class="w-full max-w-md h-auto rounded-3xl object-cover card-shadow border-4 border-yellow-500 transition duration-500 hover:scale-105"
-                                 onerror="this.onerror=null; this.src='https://placehold.co/400x400/cccccc/000000?text=Gambar+Gagal+Dimuat';"
+                                 onerror="this.onerror=null; this.src='https://placehold.co/400x400/cccccc/000000?text=Gambar+Produk+Tidak+Ditemukan';"
                             />
                         </div>
                     </div>
