--- a/index.html
+++ b/index.html
@@ -196,11 +196,8 @@
                         Hubungi kami untuk pemesanan, informasi kemitraan, atau pertanyaan lainnya.
                     </p>
                     <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-6">
-                        <a href="mailto:info@tahuwalik.com" class="inline-block primary-bg text-white px-8 py-3 rounded-xl font-bold text-lg hover:bg-opacity-90 transition duration-300 transform hover:scale-105 card-shadow">
-                            Kirim Email
-                        </a>
                         <!-- TOMBOL WHATSAPP BARU -->
-                        <a href="https://wa.me/6281234567890?text=Halo%2C%20saya%20tertarik%20dengan%20Tahu%20Walik%20Anda." 
+                        <a href="https://wa.me/6281234600318?text=Halo%2C%20saya%20tertarik%20dengan%20Tahu%20Walik%20Anda." 
                            target="_blank" 
                            class="inline-block bg-green-500 text-white px-8 py-3 rounded-xl font-bold text-lg hover:bg-green-600 transition duration-300 transform hover:scale-105 card-shadow">
                             Pesan via WhatsApp
@@ -213,7 +210,7 @@
         <!-- Footer -->
         <footer class="primary-bg text-white py-6 mt-12">
             <div class="container mx-auto px-4 text-center">
-                <p>&copy; 2024 Tahu Walik. Hak Cipta Dilindungi. <span class="text-sm opacity-80">(Berdasarkan data dari Afiyah, 2018)</span></p>
+                <p>&copy; 2025 Tahu Walik. Hak Cipta Dilindungi. </p>
             </div>
         </footer>
 
